# cpp-fx

./: .env.example  .gitignore  CMakeLists.txt  README.md  config.json  config.production.json  nixpacks.toml
postman/: ctraderplus-full-backend.postman_collection.json  ctraderplus-local.postman_environment.json  ctraderplus.postman_collection.json  openapi.yaml
proto/: OpenApiCommonMessages.proto  OpenApiCommonModelMessages.proto  OpenApiMessages.proto  OpenApiModelMessages.proto
scripts/: build-vps.sh
src/: main.cc
src/alerts/: Alert.h  AlertManager.cc  AlertManager.h  CandleAlertMonitor.cc  CandleAlertMonitor.h
src/controllers/: ActivityLog.cc  ActivityLog.h  AdminRoutes.cc  AdminRoutes.h  AuthRoutes.cc  AuthRoutes.h  Cors.cc  Cors.h  Dashboard.cc  Dashboard.h  FavoritesRoutes.cc  FavoritesRoutes.h  OpenApiDoc.cc  OpenApiDoc.h  Routes.cc  Routes.h  WsObserveController.cc  WsObserveController.h
src/core/: ApiLog.cc  ApiLog.h  AppContext.h  Auth.cc  Auth.h  Config.cc  Config.h  DbReady.cc  DbReady.h  Password.cc  Password.h
src/ctrader/: CTraderAuth.cc  CTraderAuth.h  CTraderClient.cc  CTraderClient.h  CTraderTokenStore.cc  CTraderTokenStore.h  ProtoUtil.cc  ProtoUtil.h  SymbolRegistry.cc  SymbolRegistry.h  Types.h
src/market/: AllowedPairs.cc  AllowedPairs.h  MarketHub.cc  MarketHub.h  PrevDayLevelProvider.cc  PrevDayLevelProvider.h  SymbolSubscriptionPlanner.cc  SymbolSubscriptionPlanner.h
src/services/: Migrations.cc  Migrations.h  NotificationQueue.cc  NotificationQueue.h  Notifier.cc  Notifier.h  PostgresService.cc  PostgresService.h  RedisService.cc  RedisService.h  SubscriptionService.cc  SubscriptionService.h
src/util/: ForexMarketHours.cc  ForexMarketHours.h  FormingCandle.cc  FormingCandle.h  HostResolve.cc  HostResolve.h  PairNormalizer.cc  PairNormalizer.h  TimeUtil.cc  TimeUtil.h  Uuid.h
tests/: test_units.cc
